Endringer av steg og nye spørsmål

--- a/src/app/i18n/nn.json
+++ b/src/app/i18n/nn.json
@@ -79,17 +79,15 @@
     "step.sendButtonLabel": "Send inn søknaden",
     "step.sendButtonAriaLabel": "Send inn søknaden",
 
-    "step.periode.pageTitle": "Periodar – søknad om utbetaling av omsorgspengar",
-    "step.periode.stepTitle": "Kva dagar har du vore heime med barn?",
-    "step.periode.stepIndicatorLabel": "Kva dagar har du vore heime med barn?",
+    "step.fravaer.pageTitle": "Periodar – søknad om utbetaling av omsorgspengar",
+    "step.fravaer.stepTitle": "Kva dagar har du vore heime med barn?",
+    "step.fravaer.stepIndicatorLabel": "Kva dagar har du vore heime med barn?",
 
-    "step.inntekt.pageTitle": "Inntekt – søknad om utbetaling av omsorgspengar",
-    "step.inntekt.stepTitle": "Inntekt",
-    "step.inntekt.stepIndicatorLabel": "Inntekt",
-    "step.inntekt.info.1": "Før du kan bruke av omsorgsdagane og ha rett til omsorgspengar, må du ha vore i jobb i minst 4 veker.",
-    "step.inntekt.info.2": "Når vi spør om dei siste 4 vekene, meiner vi dei 4 siste vekene før den første dagen du søkjer utbetaling for.",
-    "step.inntekt.info.3": "Dersom du ikkje har jobba dei 4 siste vekene, men fått ei utbetaling frå NAV som er likestilt med jobb, skal du svare «ja». Desse utbetalingane er: omsorgspengar, sjukepengar, dagpengar, foreldrepengar, svangerskapspengar, pleiepengar eller opplæringspengar.",
-    "step.inntekt.advarsel.ingenSituasjonValgt": "Du må velje minst éin av situasjonane over.",
+    "step.arbeidssituasjon.pageTitle": "Inntekt – søknad om utbetaling av omsorgspengar",
+    "step.arbeidssituasjon.stepTitle": "Inntekt",
+    "step.arbeidssituasjon.stepIndicatorLabel": "Inntekt",
+    "step.arbeidssituasjon.info.1": "Nå treng vi å vite kva som var din arbeidssituasjon på den første dagen du søkjer om utbetaling for.",
+    "step.arbeidssituasjon.advarsel.ingenSituasjonValgt": "Du må velje minst éin av situasjonane over.",
 
     "step.barn.pageTitle": "Barn – søknad om utbetaling av omsorgspengar",
     "step.barn.stepTitle": "Barn",
@@ -153,48 +151,46 @@
     "modal.minePlikter.part2a": "Eg har lese og forstått det som står på",
     "modal.minePlikter.part2b": "nav.no/rettogplikt",
 
-    "step.periode.counsellorpanel.content": "I dei fleste tilfella må ein som sjølvstendig næringsdrivande og frilansar betale dei 10 første daagane i året med omsorgspengar sjølv.",
-    "step.periode.dager_med_fullt_fravært.label": "Dagar med fullt fråvær",
-    "step.periode.dager_med_fullt_fravært.info": "TODO",
-    "step.periode.dager_med_delvis_fravært.label": "Dagar med delvis fråvær",
-    "step.periode.dager_med_delvis_fravært.info": "TODO",
-    "step.periode.har_du_oppholdt_deg_i_utlandet_for_dager_du_soker_ok.spm": "Har du vore i utlandet nokre av dagane du søkjer om omsorgspengar for?",
-    "step.periode.har_søkt_andre_utbetalinger.spm": "Har du søkt om andre utbetalingar frå NAV i samband med koronasituasjonen?",
-    "step.periode.hvilke_utbetalinger.spm": "Kva andre utbetalingar frå NAV har du søkt om",
+    "step.fravaer.counsellorpanel.content": "I dei fleste tilfella må ein som sjølvstendig næringsdrivande og frilansar betale dei 10 første daagane i året med omsorgspengar sjølv.",
+    "step.fravaer.dager_med_fullt_fravært.label": "Dagar med fullt fråvær",
+    "step.fravaer.dager_med_fullt_fravært.info": "TODO",
+    "step.fravaer.dager_med_delvis_fravært.label": "Dagar med delvis fråvær",
+    "step.fravaer.dager_med_delvis_fravært.info": "TODO",
+    "step.fravaer.har_du_oppholdt_deg_i_utlandet_for_dager_du_soker_ok.spm": "Har du vore i utlandet nokre av dagane du søkjer om omsorgspengar for?",
+    "step.fravaer.har_søkt_andre_utbetalinger.spm": "Har du søkt om andre utbetalingar frå NAV i samband med koronasituasjonen?",
+    "step.fravaer.hvilke_utbetalinger.spm": "Kva andre utbetalingar frå NAV har du søkt om",
 
-    "step.periode.info2021.1": "No skal du legga inn dagane du har hatt fråvær frå jobb fordi du har vore heime med omsorgsdagar. Du kan få utbetalt omsorgspengar i opptil tre månader tilbake i tid, rekna frå månaden før NAV fekk søknad frå deg.",
-    "step.periode.info2021.2": "For omsorgsdagar du bruker i 2021 må du sjølv dekka dei 10 første dagane.",
-    "step.periode.info2021.3": "I søknaden legg du inn alle dagane du har vore heime med omsorgsdagar i den perioden du søkar for, inkludert dagane du dekker sjølv.",
-    "step.periode.info2021.nedtrekk.tittle": "Informasjon til deg som søkar utbetaling for 2020",
-    "step.periode.info2021.nedtrekk.1": "Reglane for kor mange dagar du sjølv må dekkje har endra seg fleire gonger på grunn av koronasituasjonen. Her er ei oversikt over kor mange omsorgsdagar du sjølv må dekkje i 2020:",
-    "step.periode.info2021.nedtrekk.list.1": "1. januar 2020 – 12. mars 2020 må du dekkje dei 10 første omsorgsdagane sjølv",
-    "step.periode.info2021.nedtrekk.list.2": "13. mars 2020 – 30. juni 2020 må du dekkje dei 3 første omsorgsdagane sjølv.",
-    "step.periode.info2021.nedtrekk.list.3": "1. juli 2020 – 31. desember 2020 må du dekkje dei 10 første omsorgsdagane sjølv.",
-    "step.periode.info2021.nedtrekk.2": "Dagane du sjølv skal dekkje gjeld totalt for 2020. Det betyr at viss du i 2020 allereie har dekt til dømes 7 dagar, står att det 3 dagar for deg å dekkje i 2020.",
+    "step.fravaer.info2021.1": "No skal du legga inn dagane du har hatt fråvær frå jobb fordi du har vore heime med omsorgsdagar. Du kan få utbetalt omsorgspengar i opptil tre månader tilbake i tid, rekna frå månaden før NAV fekk søknad frå deg.",
+    "step.fravaer.info2021.2": "For omsorgsdagar du bruker i 2021 må du sjølv dekka dei 10 første dagane.",
+    "step.fravaer.info2021.3": "I søknaden legg du kun inn dagane du søkjer utbetaling for. Du skal altså ikkje leggje inn dagane du dekkjer sjølv.",
+    "step.fravaer.info2021.nedtrekk.tittle": "Informasjon til deg som søkar utbetaling for 2020",
+    "step.fravaer.info2021.nedtrekk.1": "Reglane for kor mange dagar du sjølv må dekkje har endra seg fleire gonger på grunn av koronasituasjonen. Her er ei oversikt over kor mange omsorgsdagar du sjølv må dekkje i 2020:",
+    "step.fravaer.info2021.nedtrekk.list.1": "1. januar 2020 – 12. mars 2020 må du dekkje dei 10 første omsorgsdagane sjølv",
+    "step.fravaer.info2021.nedtrekk.list.2": "13. mars 2020 – 30. juni 2020 må du dekkje dei 3 første omsorgsdagane sjølv.",
+    "step.fravaer.info2021.nedtrekk.list.3": "1. juli 2020 – 31. desember 2020 må du dekkje dei 10 første omsorgsdagane sjølv.",
+    "step.fravaer.info2021.nedtrekk.2": "Dagane du sjølv skal dekkje gjeld totalt for 2020. Det betyr at viss du i 2020 allereie har dekt til dømes 7 dagar, står att det 3 dagar for deg å dekkje i 2020.",
 
-    "step.periode.spm.harPerioderMedFravær": "Har du hatt heile dagar med fråvær frå jobb?",
-    "step.periode.harPerioderMedFravær.addLabel": "Legg til ny periode med fullt fråvær.",
-    "step.periode.harPerioderMedFravær.modalTitle": "Fråvær heile dagar",
-    "step.periode.harPerioderMedFravær.info.ikkeHelg.tittel": "Kvifor kan eg ikkje velje laurdag eller søndag?",
-    "step.periode.harPerioderMedFravær.info.ikkeHelg.tekst": "Du kan berre få betalt ut omsorgspengar for kvardagar, sjølv om du jobbar laurdag eller søndag. Derfor kan du ikkje velje laurdag eller søndag som start- eller sluttdato i perioden du legg inn.",
-    "step.periode.leggTilPeriodeMedFulltFravær": "Legg til ny periode med fullt fråvær",
-    "step.periode.leggTilDagMedDelvisFravær": "Legg til ny dag med delvis fråvær.",
-    "step.periode.spm.harDagerMedDelvisFravær": "Har du hatt dagar med delvis fråvær frå jobb?",
-    "step.periode.spm.hjemmePgaStengtBhgSkole.2021": "Har du vore heime frå jobb fordi barnehagen/skulen/SFO har vært stengt på grunn av koronaviruset?",
-    "step.periode.harDagerMedDelvisFravær.addLabel": "Legg til ny dag med delvis fråvær",
-    "step.periode.harDagerMedDelvisFravær.modalTitle": "Fråvær delar av dag",
-    "step.periode.harDagerMedDelvisFravær.info.ikkeHelg.tittel": "Kvifor kan eg ikkje velje laurdag eller søndag?",
-    "step.periode.harDagerMedDelvisFravær.info.ikkeHelg.tekst": "Du kan berre få betalt ut omsorgspengar for kvardagar, sjølv om du jobbar laurdag eller søndag. Derfor kan du ikkje leggje inn delvis fråvær på laurdagar eller søndagar.",
-    "step.periode.måVelgeSituasjon": "Du må velje éin av situasjonane over.",
-    "step.periode.utenlandsopphold.addLabel": "Legg til nytt utanlandsopphald",
-    "step.periode.utenlandsopphold.modalTitle": "Utanlandsopphald dei siste 12 månadene",
+    "step.fravaer.spm.harPerioderMedFravær": "Har du hatt heile dagar med fråvær frå jobb?",
+    "step.fravaer.harPerioderMedFravær.addLabel": "Legg til ny periode med fullt fråvær.",
+    "step.fravaer.harPerioderMedFravær.modalTitle": "Fråvær heile dagar",
+    "step.fravaer.harPerioderMedFravær.info.ikkeHelg.tittel": "Kvifor kan eg ikkje velje laurdag eller søndag?",
+    "step.fravaer.harPerioderMedFravær.info.ikkeHelg.tekst": "Du kan berre få betalt ut omsorgspengar for kvardagar, sjølv om du jobbar laurdag eller søndag. Derfor kan du ikkje velje laurdag eller søndag som start- eller sluttdato i perioden du legg inn.",
+    "step.fravaer.leggTilPeriodeMedFulltFravær": "Legg til ny periode med fullt fråvær",
+    "step.fravaer.leggTilDagMedDelvisFravær": "Legg til ny dag med delvis fråvær.",
+    "step.fravaer.spm.harDagerMedDelvisFravær": "Har du hatt dagar med delvis fråvær frå jobb?",
+    "step.fravaer.spm.hjemmePgaStengtBhgSkole.2021": "Har du vore heime frå jobb fordi barnehagen/skulen/SFO har vært stengt på grunn av koronaviruset?",
+    "step.fravaer.harDagerMedDelvisFravær.addLabel": "Legg til ny dag med delvis fråvær",
+    "step.fravaer.harDagerMedDelvisFravær.modalTitle": "Fråvær delar av dag",
+    "step.fravaer.harDagerMedDelvisFravær.info.ikkeHelg.tittel": "Kvifor kan eg ikkje velje laurdag eller søndag?",
+    "step.fravaer.harDagerMedDelvisFravær.info.ikkeHelg.tekst": "Du kan berre få betalt ut omsorgspengar for kvardagar, sjølv om du jobbar laurdag eller søndag. Derfor kan du ikkje leggje inn delvis fråvær på laurdagar eller søndagar.",
+    "step.fravaer.måVelgeSituasjon": "Du må velje éin av situasjonane over.",
+    "step.fravaer.utenlandsopphold.addLabel": "Legg til nytt utanlandsopphald",
+    "step.fravaer.utenlandsopphold.modalTitle": "Utanlandsopphald dei siste 12 månadene",
 
     "steg.arbeid.spm": "Kva er arbeidssituasjonen din? Du kan velje fleire.",
 
-    "step.inntekt.er_arbeidstaker": "Er du arbeidstakar i tillegg til at du er sjølvstendig næringsdrivande og/eller frilansar?",
+    "step.arbeidssituasjon.er_arbeidstaker": "Er du arbeidstakar i tillegg til at du er sjølvstendig næringsdrivande og/eller frilansar?",
 
-    "steg.barn.fosterbarn.spm": "Har du fosterbarn?",
-    "steg.barn.har_fått_ekstra_omsorgsdager.spm": "Har du fått ekstra omsorgsdagar fordi du har eit kronisk sjukt eller funksjonshemma barn?",
 
     "steg.medlemsskap.annetLandSiste12.spm": "Har du budd i utlandet i heile eller delar av dei siste 12 månadene?",
     "steg.medlemsskap.annetLandNeste12.spm": "Planlegg du å bu i utlandet i heile eller delar av dei siste 12 månadene?",
@@ -349,8 +345,6 @@
     "steg.intro.stengtBhgSkole.1": "I søknaden må du laste opp ei stadfestinga frå barnehagen eller skulen på at dei har stengt.",
     "steg.intro.stengtBhgSkole.2": "Dersom du ikkje har stadfestinga tilgjengeleg når du søkjer, kan du ettersende den. Vi kan ikkje behandle søknaden før vi mottar stadfestinga.",
 
-    "steg.en.smittevern.sporsmal": "Har du vore heime med barn av særlege smittevernomsyn?",
-
     "steg.oppsummering.dokumenter.header": "Vedlegg",
     "steg.oppsummering.dokumenter.ingenVedlegg": "Ingen vedlegg er lasta opp",
     "steg.oppsummering.dokumenterSmittevern.header": "Stadfesting frå lege",
@@ -414,18 +408,19 @@
     "summary.virksomhet.varigEndring.html": "Har hatt varig endring i arbeidsforholdet, verksemda eller arbeidssituasjonen dei siste fire åra. Datoen for endringa var {dato}, og næringsinntekt etter endringa er <strong>{endring}</strong>. Skildring av endringa:",
     "summary.virksomhet.yrkesaktivSisteTreFerdigliknedeÅrene": "Blei yrkesaktiv {dato}",
 
-    "selvstendig.harDuHattInntekt.spm": "Har du hatt inntekt som sjølvstendig næringsdrivande dei siste 4 vekene?",
+    "selvstendig.erDuSelvstendigNæringsdrivende.spm": "Er du sjølvstendig næringsdrivande?",
     "selvstendig.list.tittel": "Registrerte verksemder",
     "selvstendig.list.leggTilLabel": "Legg til verksemd",
     "selvstendig.dialog.tittel": "Verksemd",
-    "selvstendig.summary.harDuHattInntekt.header": "Har du hatt inntekt som sjølvstendig næringsdrivande dei siste 4 vekene?",
+    "selvstendig.summary.harDuHattInntekt.header": "Er du sjølvstendig næringsdrivande?",
 
-    "frilanser.harDuHattInntekt.spm": "Har du jobba og hatt inntekt som frilansar dei siste 4 vekene?",
+    "frilanser.erFrilanser.spm": "Er du frilansar?",
     "frilanser.nårStartet.spm": "Når starta du som frilansar?",
     "frilanser.jobberFortsatt.spm": "Jobbar du framleis som frilansar?",
+    "frilanser.nårSluttet.spm": "Når sluttet du som frilansar?",
 
     "frilanser.summary.header": "Frilansinntekt",
-    "frilanser.summary.harDuHattInntekt.header": "Har du jobba og hatt inntekt som frilansar dei 4 siste vekene?",
+    "frilanser.summary.harDuHattInntekt.header": "Er du frilansar?",
     "frilanser.summary.nårStartet.header": "Når starta du som frilansar?",
     "frilanser.summary.jobberFortsatt.header": "Jobbar du framleis som frilansar?",
 
