--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -79,21 +79,23 @@
     "step.sendButtonLabel": "Send inn søknaden",
     "step.sendButtonAriaLabel": "Send inn søknaden",
 
-    "step.periode.pageTitle": "Perioder - Søknad om utbetaling av omsorgspenger",
-    "step.periode.stepTitle": "Hvilke dager har du vært hjemme med barn?",
-    "step.periode.stepIndicatorLabel": "Hvilke dager har du vært hjemme med barn?",
+    "step.periode.pageTitle": "Første og siste dag du skal søke for",
+    "step.periode.stepTitle": "Første og siste dag du skal søke for",
+    "step.periode.stepIndicatorLabel": "Første og siste dag du skal søke for",
 
-    "step.inntekt.pageTitle": "Inntekt - Søknad om utbetaling av omsorgspenger",
-    "step.inntekt.stepTitle": "Inntekt",
-    "step.inntekt.stepIndicatorLabel": "Inntekt",
-    "step.inntekt.info.1": "Før du kan bruke av omsorgsdagene og ha rett til omsorgspenger, må du ha vært i jobb i minst 4 uker.",
-    "step.inntekt.info.2": "Når vi spør om de 4 siste ukene, mener vi de 4 siste ukene før den første dagen du søker utbetaling for.",
-    "step.inntekt.info.3": "Hvis du ikke har jobbet de 4 siste ukene, men mottatt en utbetaling fra NAV som er likestilt med jobb, skal du svare ja. Disse utbetalingene er: omsorgspenger, sykepenger, dagpenger, foreldrepenger, svangerskapspenger, pleiepenger eller opplæringspenger.",
-    "step.inntekt.advarsel.ingenSituasjonValgt": "Du må velge minst én av situasjonene over.",
+    "step.fravaer.pageTitle": "Perioder - Søknad om utbetaling av omsorgspenger",
+    "step.fravaer.stepTitle": "Hvilke dager har du vært hjemme med barn?",
+    "step.fravaer.stepIndicatorLabel": "Hvilke dager har du vært hjemme med barn?",
 
-    "step.barn.pageTitle": "Barn - Søknad om utbetaling av omsorgspenger",
-    "step.barn.stepTitle": "Barn",
-    "step.barn.stepIndicatorLabel": "Barn",
+    "step.arbeidssituasjon.pageTitle": "Arbeidssituasjon - Søknad om utbetaling av omsorgspenger",
+    "step.arbeidssituasjon.stepTitle": "Arbeidssituasjon",
+    "step.arbeidssituasjon.stepIndicatorLabel": "Arbeidssituasjon",
+    "step.arbeidssituasjon.info.1": "Nå trenger vi å vite hva som var arbeidssituasjonen din på den første dagen du søker om utbetaling for.",
+    "step.arbeidssituasjon.advarsel.ingenSituasjonValgt": "Du må velge minst én av situasjonene over.",
+
+    "step.barn.pageTitle": "Om barn",
+    "step.barn.stepTitle": "Om barn",
+    "step.barn.stepIndicatorLabel": "Om barn",
 
     "step.medlemskap.pageTitle": "Medlemskap - Søknad om utbetaling av omsorgspenger",
     "step.medlemskap.stepTitle": "Medlemskap",
@@ -153,48 +155,70 @@
     "modal.minePlikter.part2a": "Jeg har lest og forstått det som står på",
     "modal.minePlikter.part2b": "nav.no/rettogplikt",
 
-    "step.periode.counsellorpanel.content": "I de fleste tilfeller må man som selvstendig næringsdrivende og frilanser betale de 10 første dager med omsorgspenger i året selv.",
-    "step.periode.dager_med_fullt_fravært.label": "Dager med fullt fravær",
-    "step.periode.dager_med_fullt_fravært.info": "TODO",
-    "step.periode.dager_med_delvis_fravært.label": "Dager med delvis fravær",
-    "step.periode.dager_med_delvis_fravært.info": "TODO",
-    "step.periode.har_du_oppholdt_deg_i_utlandet_for_dager_du_soker_ok.spm": "Har du vært i utlandet noen av dagene du søker omsorgspenger for?",
-    "step.periode.har_søkt_andre_utbetalinger.spm": "Har du søkt om andre utbetalinger fra NAV i forbindelse med koronasituasjonen?",
-    "step.periode.hvilke_utbetalinger.spm": "Hvilke andre utbetalinger fra NAV har du søkt om?",
+    "step.periode.veileder": "Informasjon om hvorfor vi spør om dette. Kanskje si noe om at en må søke flere ganger, dersom en skal søke for dager i ulike kalenderår.",
+    "step.periode.førsteDagMedFravær.spm": "Hva er første dag du skal søke for?",
+    "step.periode.sisteDagMedFravær.spm": "Hva er siste dag du skal søke for?",
 
-    "step.periode.info2021.1": "Nå skal du legge inn dagene du har hatt fravær fra jobb fordi du har vært hjemme med omsorgsdager. Du kan få utbetalt omsorgspenger i opptil tre måneder tilbake i tid, regnet fra måneden før NAV mottok søknad fra deg.",
-    "step.periode.info2021.2": "For omsorgsdager du bruker i 2021 må du selv dekke de 10 første dagene.",
-    "step.periode.info2021.3": "I søknaden legger du inn alle dagene du har vært hjemme med omsorgsdager i den perioden du søker for, inkludert dagene du dekker selv.",
-    "step.periode.info2021.nedtrekk.tittle": "Informasjon til deg som søker utbetaling for 2020",
-    "step.periode.info2021.nedtrekk.1": "Reglene for hvor mange dager du selv må dekke har endret seg flere ganger på grunn av koronasituasjonen. Her er en oversikt over hvor mange omsorgsdager du selv må dekke i 2020:",
-    "step.periode.info2021.nedtrekk.list.1": "1. januar 2020 – 12. mars 2020 må du dekke de 10 første omsorgsdagene selv.",
-    "step.periode.info2021.nedtrekk.list.2": "13. mars 2020 – 30. juni 2020 må du dekke de 3 første omsorgsdagene selv.",
-    "step.periode.info2021.nedtrekk.list.3": "1. juli 2020 – 31. desember 2020 må du dekke de 10 første omsorgsdagene selv.",
-    "step.periode.info2021.nedtrekk.2": "Dagene du selv skal dekke gjelder totalt for 2020. Det betyr at hvis du i 2020 allerede har dekket for eksempel 7 dager, gjenstår det 3 dager for deg å dekke i 2020.",
+    "step.fravaer.counsellorpanel.content": "I de fleste tilfeller må man som selvstendig næringsdrivende og frilanser betale de 10 første dager med omsorgspenger i året selv.",
+    "step.fravaer.dager_med_fullt_fravært.label": "Dager med fullt fravær",
+    "step.fravaer.dager_med_fullt_fravært.info": "TODO",
+    "step.fravaer.dager_med_delvis_fravært.label": "Dager med delvis fravær",
+    "step.fravaer.dager_med_delvis_fravært.info": "TODO",
+    "step.fravaer.har_du_oppholdt_deg_i_utlandet_for_dager_du_soker_ok.spm": "Har du vært i utlandet noen av dagene du søker omsorgspenger for?",
+    "step.fravaer.har_søkt_andre_utbetalinger.spm": "Har du søkt om andre utbetalinger fra NAV i forbindelse med koronasituasjonen?",
+    "step.fravaer.hvilke_utbetalinger.spm": "Hvilke andre utbetalinger fra NAV har du søkt om?",
 
-    "step.periode.spm.harPerioderMedFravær": "Har du hatt hele dager med fravær fra jobb?",
-    "step.periode.harPerioderMedFravær.addLabel": "Legg til ny periode med fullt fravær",
-    "step.periode.harPerioderMedFravær.modalTitle": "Fravær hele dager",
-    "step.periode.harPerioderMedFravær.info.ikkeHelg.tittel": "Hvorfor kan jeg ikke velge lørdag eller søndag?",
-    "step.periode.harPerioderMedFravær.info.ikkeHelg.tekst": "Du kan kun få utbetalt omsorgspenger for hverdager, selv om du jobber lørdag eller søndag. Derfor kan du ikke velge lørdag eller søndag som start- eller sluttdato i perioden du legger inn.",
-    "step.periode.leggTilPeriodeMedFulltFravær": "Legg til ny periode med fullt fravær",
-    "step.periode.leggTilDagMedDelvisFravær": "Legg til ny dag med delvis fravær",
-    "step.periode.spm.harDagerMedDelvisFravær": "Har du hatt dager med delvis fravær fra jobb?",
-    "step.periode.spm.hjemmePgaStengtBhgSkole.2021": "Har du vært hjemme fra jobb fordi barnehage/skole/SFO har vært stengt på grunn av koronaviruset?",
-    "step.periode.harDagerMedDelvisFravær.addLabel": "Legg til ny dag med delvis fravær",
-    "step.periode.harDagerMedDelvisFravær.modalTitle": "Fravær deler av dag",
-    "step.periode.harDagerMedDelvisFravær.info.ikkeHelg.tittel": "Hvorfor kan jeg ikke velge lørdag eller søndag?",
-    "step.periode.harDagerMedDelvisFravær.info.ikkeHelg.tekst": "Du kan kun få utbetalt omsorgspenger for hverdager, selv om du jobber lørdag eller søndag. Derfor kan du ikke legge inn delvis fravær på lørdager eller søndager.",
-    "step.periode.måVelgeSituasjon": "Du må velge én av situasjonene over.",
-    "step.periode.utenlandsopphold.addLabel": "Legg til nytt utenlandsopphold",
-    "step.periode.utenlandsopphold.modalTitle": "Utenlandsopphold siste 12 måneder",
+    "step.fravaer.info2021.1": "Nå skal du legge inn dagene du har hatt fravær fra jobb fordi du har vært hjemme med omsorgsdager. Du kan få utbetalt omsorgspenger i opptil tre måneder tilbake i tid, regnet fra måneden før NAV mottok søknad fra deg.",
+    "step.fravaer.info2021.2": "For omsorgsdager du bruker i 2021 må du selv dekke de 10 første dagene.",
+    "step.fravaer.info2021.3": "I søknaden legger du kun inn dagene du søker utbetaling for. Du skal altså ikke legge inn dagene du dekker selv.",
+    "step.fravaer.info2021.nedtrekk.tittle": "Informasjon til deg som søker utbetaling for 2020",
+    "step.fravaer.info2021.nedtrekk.1": "Reglene for hvor mange dager du selv må dekke har endret seg flere ganger på grunn av koronasituasjonen. Her er en oversikt over hvor mange omsorgsdager du selv må dekke i 2020:",
+    "step.fravaer.info2021.nedtrekk.list.1": "1. januar 2020 – 12. mars 2020 må du dekke de 10 første omsorgsdagene selv.",
+    "step.fravaer.info2021.nedtrekk.list.2": "13. mars 2020 – 30. juni 2020 må du dekke de 3 første omsorgsdagene selv.",
+    "step.fravaer.info2021.nedtrekk.list.3": "1. juli 2020 – 31. desember 2020 må du dekke de 10 første omsorgsdagene selv.",
+    "step.fravaer.info2021.nedtrekk.2": "Dagene du selv skal dekke gjelder totalt for 2020. Det betyr at hvis du i 2020 allerede har dekket for eksempel 7 dager, gjenstår det 3 dager for deg å dekke i 2020.",
+
+    "step.fravaer.spm.harPerioderMedFravær": "Har du hatt hele dager med fravær fra jobb?",
+    "step.fravaer.harPerioderMedFravær.addLabel": "Legg til ny periode med fullt fravær",
+    "step.fravaer.harPerioderMedFravær.modalTitle": "Fravær hele dager",
+    "step.fravaer.harPerioderMedFravær.info.ikkeHelg.tittel": "Hvorfor kan jeg ikke velge lørdag eller søndag?",
+    "step.fravaer.harPerioderMedFravær.info.ikkeHelg.tekst": "Du kan kun få utbetalt omsorgspenger for hverdager, selv om du jobber lørdag eller søndag. Derfor kan du ikke velge lørdag eller søndag som start- eller sluttdato i perioden du legger inn.",
+    "step.fravaer.leggTilPeriodeMedFulltFravær": "Legg til ny periode med fullt fravær",
+    "step.fravaer.leggTilDagMedDelvisFravær": "Legg til ny dag med delvis fravær",
+    "step.fravaer.spm.harDagerMedDelvisFravær": "Har du hatt dager med delvis fravær fra jobb?",
+    "step.fravaer.spm.hjemmePgaStengtBhgSkole.2021": "Har du vært hjemme fra jobb fordi barnehage/skole/SFO har vært stengt på grunn av koronaviruset?",
+    "step.fravaer.harDagerMedDelvisFravær.addLabel": "Legg til ny dag med delvis fravær",
+    "step.fravaer.harDagerMedDelvisFravær.modalTitle": "Fravær deler av dag",
+    "step.fravaer.harDagerMedDelvisFravær.info.ikkeHelg.tittel": "Hvorfor kan jeg ikke velge lørdag eller søndag?",
+    "step.fravaer.harDagerMedDelvisFravær.info.ikkeHelg.tekst": "Du kan kun få utbetalt omsorgspenger for hverdager, selv om du jobber lørdag eller søndag. Derfor kan du ikke legge inn delvis fravær på lørdager eller søndager.",
+    "step.fravaer.måVelgeSituasjon": "Du må velge én av situasjonene over.",
+    "step.fravaer.utenlandsopphold.addLabel": "Legg til nytt utenlandsopphold",
+    "step.fravaer.utenlandsopphold.modalTitle": "Utenlandsopphold siste 12 måneder",
 
     "steg.arbeid.spm": "Hva er din arbeidssituasjon? Du kan velge flere.",
 
-    "step.inntekt.er_arbeidstaker": "Er du arbeidstaker i tillegg til at du er selvstendig næringsdrivende og/eller frilanser?",
+    "step.arbeidssituasjon.er_arbeidstaker": "Er du arbeidstaker i tillegg til at du er selvstendig næringsdrivende og/eller frilanser?",
 
-    "steg.barn.fosterbarn.spm": "Har du fosterbarn?",
-    "steg.barn.har_fått_ekstra_omsorgsdager.spm": "Har du fått ekstra omsorgsdager fordi du har et kronisk sykt eller funksjonshemmet barn?",
+    "step.barn.registrerteBarn.listHeader": "Registrerte barn",
+    "steg.barn.pageTitle": "Om barn",
+    "steg.barn.stepTitle": "Om barn",
+    "steg.barn.nextButtonLabel": "Fortsett",
+    "steg.barn.info.title": "Her ser du barn som er registrert på deg.",
+    "steg.barn.info": "Det er kun barn under 18 år som vises her. Hvis du har barn som har fylt 18 år i år, og som du har fått ekstra omsorgsdager for, kan du selv legge til dette barnet.",
+    "steg.barn.info.ingenbarn.1": "Vi fant ingen barn registrert på deg. Har du  barn som ikke er registrert her, kan du selv legge inn disse. Dette kan være fosterbarn, eller om du har barn som er fylt 18 år og som har ekstra omsorgsdager på grunn av kronisk sykdom eller funksjonshemning.",
+    "steg.barn.info.ingenbarn.2": "Du må legge til minst ett barn for å kunne gå videre.",
+
+    "steg.barn.info.title.andreBarn": "Har du andre barn?",
+    "steg.barn.info.title.flereBarn": "Har du flere barn?",
+    "steg.barn.info.text": "Har du barn som ikke er registrert her, kan du legge inn disse selv. Det kan være fosterbarn, eller om du har barn som er fylt 18 år og som har ekstra omsorgsdager på grunn av kronisk sykdom eller funksjonshemning.",
+    "steg.barn.annetBarn.addLabel": "Legg til barn",
+    "steg.barn.annetBarn.listTitle": "Andre barn",
+    "steg.barn.annetBarn.modalTitle": "Legg til barn",
+    "steg.barn.formLeggTilBarn.aldersGrenseInfo": "(Du kan ikke legge til barn som er 19 år eller eldre)",
+    "steg.barn.harAleneOmsorg.flereBarn.spm": "Er du alene om omsorgen for barn?",
+    "steg.barn.harAleneOmsorg.ettBarn.spm": "Er du alene om omsorgen for barnet ditt?",
+    "steg.barn.hvilkeAvBarnaAleneomsorg.spm": "Kryss av for barn du er alene om omsorgen for:",
+    "steg.barn.aldersGrenseInfo": "(Du kan ikke legge til barn som er 19 år eller eldre)",
 
     "steg.medlemsskap.annetLandSiste12.spm": "Har du bodd i utlandet i hele eller deler av de siste 12 månedene?",
     "steg.medlemsskap.annetLandNeste12.spm": "Planlegger du å bo i utlandet i hele eller deler av de neste 12 månedene?",
@@ -212,15 +236,9 @@
     "steg.oppsummering.søker.omDeg": "Om deg",
     "steg.oppsummering.søker.fnr": "Fødselsnummer: {fødselsnummer}",
 
-    "steg.oppsummering.barnet.omBarn": "Om barn",
-    "steg.oppsummering.barnet.header": "Om barnet",
-    "steg.oppsummering.barnet.navn": "Navn: {navn}",
-    "steg.oppsummering.barnet.fødselsdato": "Fødselsdato: {dato}",
-    "steg.oppsummering.barnet.forelopigFnr": "Foreløpig fødselsnummer / D-nummer: {fnr}",
-    "steg.oppsummering.barnet.fnr": "Fødselsnummer: {fnr}",
-    "steg.oppsummering.barnet.søkersRelasjonTilBarnet": "Din relasjon til barnet: {relasjon}",
-    "steg.oppsummering.barnet.sammeAdresse.header": "Er du folkeregistrert på samme adresse som barnet?",
-    "steg.oppsummering.barnet.deltOmsorg.header": "Deler du omsorgen med den andre forelderen?",
+    "steg.oppsummering.barn.header": "Om barn",
+    "steg.oppsummering.barn.alleBarn": "Dine barn",
+    "steg.oppsummering.barn.harAleneomsorgFor": "Barn du er alene om omsorgen for",
 
     "steg.oppsummering.arbeidssituasjon.header": "Din arbeidssituasjon",
     "steg.oppsummering.søkt_om_andre_utbetalinger": "Andre utbetalinger det er søkt om fra NAV",
@@ -302,6 +320,14 @@
     "fieldvalidation.for_mange_dokumenter": "For mange dokumenter er lastet opp",
     "fieldvalidation.samlet_storrelse_for_hoy": "Total samlet størrelse for dokumentene du har lastet opp overstiger grensen på 24Mb.",
 
+    "fieldvalidation.førsteDagMedFravære_påkrevd": "Feltet \"Hva er første dag du skal søke for?\" er påkrevd",
+    "fieldvalidation.førsteDagMedFravære_ugyldigTidsperiode": "Datoen for når du har først dag med fravær må være innen siste år, og kan ikke være etter dagens dato.",
+    "fieldvalidation.sisteDagMedFravære_påkrevd": "Feltet \"Hva er siste dag du skal søke for?\" er påkrevd",
+    "fieldvalidation.sisteDagMedFravære_ugyldigTidsperiode": "Datoen for når du har siste dag med fravær må være lik, eller etter første dag, og kan ikke være etter dagens dato.",
+    "fieldvalidation.sisteDagMedFravære_ikkeSammeÅrSomFørsteDag": "En søknad kan kun inneholde dager med fravær som er i samme kalenderår. Dersom du skal søke for dager som er i ulike kalenderår, må du sende én søknad for hvert kalenderår.",
+
+    "fieldvalidation.aleneomsorgFor_påkrevd": "Du har valgt at du er alene om omsorgen for barn, da må du velge hvilket barn du har aleneomsorg for",
+
     "avbrytSøknadDialog.avbrytSøknadLabel": "Ja, avbryt søknad",
     "avbrytSøknadDialog.fortsettSøknadLabel": "Nei",
     "avbrytSøknadDialog.intro": "Det du har fylt ut i søknaden blir slettet, og du kommer tilbake til velkomstsiden.",
@@ -348,8 +374,6 @@
     "steg.intro.smittevernInfo.2": "Hvis du ikke har bekreftelse tilgjengelig når du søker, kan du ettersende den. Vi kan ikke behandle søknaden før vi mottar bekreftelsen.",
     "steg.intro.stengtBhgSkole.1": "I søknaden må du laste opp en bekreftelse fra barnehagen eller skolen på at de har stengt.",
     "steg.intro.stengtBhgSkole.2": "Hvis du ikke har bekreftelsen tilgjengelig når du søker, kan du ettersende den. Vi kan ikke behandle søknaden før vi mottar bekreftelsen.",
-
-    "steg.en.smittevern.sporsmal": "Har du vært hjemme med barn grunnet særlige smittevernhensyn?",
 
     "steg.oppsummering.dokumenter.header": "Vedlegg",
     "steg.oppsummering.dokumenter.ingenVedlegg": "Ingen vedlegg er lastet opp",
@@ -414,18 +438,19 @@
     "summary.virksomhet.varigEndring.html": "Har hatt varig endring i arbeidsforholdet, virksomheten eller arbeidssituasjonen de siste fire årene. Dato for endring var {dato}, og næringsinntekt etter endringen er <strong>{inntekt}</strong>. Beskrivelse av endringen:",
     "summary.virksomhet.yrkesaktivSisteTreFerdigliknedeÅrene": "Ble yrkesaktiv {dato}",
 
-    "selvstendig.harDuHattInntekt.spm": "Har du hatt inntekt som selvstendig næringsdrivende siste 4 uker?",
+    "selvstendig.erDuSelvstendigNæringsdrivende.spm": "Er du selvstendig næringsdrivende?",
     "selvstendig.list.tittel": "Registrerte virksomheter",
     "selvstendig.list.leggTilLabel": "Legg til virksomhet",
     "selvstendig.dialog.tittel": "Virksomhet",
-    "selvstendig.summary.harDuHattInntekt.header": "Har du hatt inntekt som selvstendig næringsdrivende siste 4 uker?",
+    "selvstendig.summary.harDuHattInntekt.header": "Er du selvstendig næringsdrivende?",
 
-    "frilanser.harDuHattInntekt.spm": "Har du jobbet og hatt inntekt som frilanser de siste 4 ukene?",
+    "frilanser.erFrilanser.spm": "Er du frilanser?",
     "frilanser.nårStartet.spm": "Når startet du som frilanser?",
     "frilanser.jobberFortsatt.spm": "Jobber du fortsatt som frilanser?",
+    "frilanser.nårSluttet.spm": "Når sluttet du som frilanser?",
 
     "frilanser.summary.header": "Frilansinntekt",
-    "frilanser.summary.harDuHattInntekt.header": "Har du jobbet og hatt inntekt som frilanser de siste 4 ukene?",
+    "frilanser.summary.harDuHattInntekt.header": "Er du frilanser?",
     "frilanser.summary.nårStartet.header": "Når startet du som frilanser?",
     "frilanser.summary.jobberFortsatt.header": "Jobber du fortsatt som frilanser?",
 
