--- a/src/app/i18n/nn.json
+++ b/src/app/i18n/nn.json
@@ -62,9 +62,9 @@
     "fileUploadErrors.part1": "Det har dessverre skjedd ein feil under opplastinga av dei følgjande vedlegga:",
     "formikValidationErrorSummary.tittel": "Du må rette opp i følgjande feil:",
 
-    "andre_utbetalinger.dagpenger": "Dagpengar",
-    "andre_utbetalinger.sykepenger": "Sjukepengar",
-    "andre_utbetalinger.midlertidigkompensasjonsnfri": "Mellombels kompensasjon for sjølvstendig næringsdrivande og frilansarar",
+    "andreUtbetalinger.dagpenger": "Dagpengar",
+    "andreUtbetalinger.sykepenger": "Sjukepengar",
+    "andreUtbetalinger.midlertidigkompensasjonsnfri": "Mellombels kompensasjon for sjølvstendig næringsdrivande og frilansarar",
 
     "arbeidssituasjon.arbeidstaker": "Arbeidstakar",
     "arbeidssituasjon.selvstendigNæringsdrivende": "Sjølvstendig næringsdrivande",
@@ -157,7 +157,7 @@
     "step.fravaer.dager_med_delvis_fravært.label": "Dagar med delvis fråvær",
     "step.fravaer.dager_med_delvis_fravært.info": "TODO",
     "step.fravaer.har_du_oppholdt_deg_i_utlandet_for_dager_du_soker_ok.spm": "Har du vore i utlandet nokre av dagane du søkjer om omsorgspengar for?",
-    "step.fravaer.har_søkt_andre_utbetalinger.spm": "Har du søkt om andre utbetalingar frå NAV i samband med koronasituasjonen?",
+    "step.fravaer.harSøktAndreUtbetalinger.spm": "Har du søkt om andre utbetalingar frå NAV i samband med koronasituasjonen?",
     "step.fravaer.hvilke_utbetalinger.spm": "Kva andre utbetalingar frå NAV har du søkt om",
 
     "step.fravaer.info2021.1": "No skal du legga inn dagane du har hatt fråvær frå jobb fordi du har vore heime med omsorgsdagar. Du kan få utbetalt omsorgspengar i opptil tre månader tilbake i tid, rekna frå månaden før NAV fekk søknad frå deg.",
@@ -189,7 +189,7 @@
 
     "steg.arbeid.spm": "Kva er arbeidssituasjonen din? Du kan velje fleire.",
 
-    "step.arbeidssituasjon.er_arbeidstaker": "Er du arbeidstakar i tillegg til at du er sjølvstendig næringsdrivande og/eller frilansar?",
+    "step.arbeidssituasjon.erArbeidstaker": "Er du arbeidstakar i tillegg til at du er sjølvstendig næringsdrivande og/eller frilansar?",
 
 
     "steg.medlemsskap.annetLandSiste12.spm": "Har du budd i utlandet i heile eller delar av dei siste 12 månadene?",
@@ -219,7 +219,7 @@
     "steg.oppsummering.barnet.deltOmsorg.header": "Deler du omsorga med den andre forelderen?",
 
     "steg.oppsummering.arbeidssituasjon.header": "Arbeidssituasjonen din",
-    "steg.oppsummering.søkt_om_andre_utbetalinger": "Andre utbetalingar som det er søkt om frå NAV",
+    "steg.oppsummering.harSøktOmAndreUtbetalinger": "Andre utbetalingar som det er søkt om frå NAV",
     "steg.oppsummering.utbetalinger.header": "Omsorgsdagar du søker utbetaling for",
 
     "steg.oppsummering.medlemskap.header": "Medlemskap i folketrygden",
