--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -171,12 +171,13 @@
     "step.fravaer.info2021.1": "Nå skal du legge inn dagene du har hatt fravær fra jobb fordi du har vært hjemme med omsorgsdager. Du kan få utbetalt omsorgspenger i opptil tre måneder tilbake i tid, regnet fra måneden før NAV mottok søknad fra deg.",
     "step.fravaer.info2021.2": "For omsorgsdager du bruker i 2021 må du selv dekke de 10 første dagene.",
     "step.fravaer.info2021.3": "I søknaden legger du kun inn dagene du søker utbetaling for. Du skal altså ikke legge inn dagene du dekker selv.",
-    "step.fravaer.info2021.nedtrekk.tittle": "Informasjon til deg som søker utbetaling for 2020",
-    "step.fravaer.info2021.nedtrekk.1": "Reglene for hvor mange dager du selv må dekke har endret seg flere ganger på grunn av koronasituasjonen. Her er en oversikt over hvor mange omsorgsdager du selv må dekke i 2020:",
-    "step.fravaer.info2021.nedtrekk.list.1": "1. januar 2020 – 12. mars 2020 må du dekke de 10 første omsorgsdagene selv.",
-    "step.fravaer.info2021.nedtrekk.list.2": "13. mars 2020 – 30. juni 2020 må du dekke de 3 første omsorgsdagene selv.",
-    "step.fravaer.info2021.nedtrekk.list.3": "1. juli 2020 – 31. desember 2020 må du dekke de 10 første omsorgsdagene selv.",
-    "step.fravaer.info2021.nedtrekk.2": "Dagene du selv skal dekke gjelder totalt for 2020. Det betyr at hvis du i 2020 allerede har dekket for eksempel 7 dager, gjenstår det 3 dager for deg å dekke i 2020.",
+    "step.fravaer.info2021.nedtrekk.title": "Informasjon til deg som søker utbetaling for 2021",
+    "step.fravaer.info2020.nedtrekk.title": "Informasjon til deg som søker utbetaling for 2020",
+    "step.fravaer.info2020.nedtrekk.1": "Reglene for hvor mange dager du selv må dekke har endret seg flere ganger på grunn av koronasituasjonen. Her er en oversikt over hvor mange omsorgsdager du selv må dekke i 2020:",
+    "step.fravaer.info2020.nedtrekk.list.1": "1. januar 2020 – 12. mars 2020 må du dekke de 10 første omsorgsdagene selv.",
+    "step.fravaer.info2020.nedtrekk.list.2": "13. mars 2020 – 30. juni 2020 må du dekke de 3 første omsorgsdagene selv.",
+    "step.fravaer.info2020.nedtrekk.list.3": "1. juli 2020 – 31. desember 2020 må du dekke de 10 første omsorgsdagene selv.",
+    "step.fravaer.info2020.nedtrekk.2": "Dagene du selv skal dekke gjelder totalt for 2020. Det betyr at hvis du i 2020 allerede har dekket for eksempel 7 dager, gjenstår det 3 dager for deg å dekke i 2020.",
 
     "step.fravaer.spm.harPerioderMedFravær": "Har du hatt hele dager med fravær fra jobb?",
     "step.fravaer.harPerioderMedFravær.addLabel": "Legg til ny periode med fullt fravær",
