--- a/src/app/i18n/nn.json
+++ b/src/app/i18n/nn.json
@@ -163,12 +163,13 @@
     "step.fravaer.info2021.1": "No skal du legga inn dagane du har hatt fråvær frå jobb fordi du har vore heime med omsorgsdagar. Du kan få utbetalt omsorgspengar i opptil tre månader tilbake i tid, rekna frå månaden før NAV fekk søknad frå deg.",
     "step.fravaer.info2021.2": "For omsorgsdagar du bruker i 2021 må du sjølv dekka dei 10 første dagane.",
     "step.fravaer.info2021.3": "I søknaden legg du kun inn dagane du søkjer utbetaling for. Du skal altså ikkje leggje inn dagane du dekkjer sjølv.",
-    "step.fravaer.info2021.nedtrekk.tittle": "Informasjon til deg som søkar utbetaling for 2020",
-    "step.fravaer.info2021.nedtrekk.1": "Reglane for kor mange dagar du sjølv må dekkje har endra seg fleire gonger på grunn av koronasituasjonen. Her er ei oversikt over kor mange omsorgsdagar du sjølv må dekkje i 2020:",
-    "step.fravaer.info2021.nedtrekk.list.1": "1. januar 2020 – 12. mars 2020 må du dekkje dei 10 første omsorgsdagane sjølv",
-    "step.fravaer.info2021.nedtrekk.list.2": "13. mars 2020 – 30. juni 2020 må du dekkje dei 3 første omsorgsdagane sjølv.",
-    "step.fravaer.info2021.nedtrekk.list.3": "1. juli 2020 – 31. desember 2020 må du dekkje dei 10 første omsorgsdagane sjølv.",
-    "step.fravaer.info2021.nedtrekk.2": "Dagane du sjølv skal dekkje gjeld totalt for 2020. Det betyr at viss du i 2020 allereie har dekt til dømes 7 dagar, står att det 3 dagar for deg å dekkje i 2020.",
+    "step.fravaer.info2021.nedtrekk.title": "Informasjon til deg som søkar utbetaling for 2021",
+    "step.fravaer.info2020.nedtrekk.title": "Informasjon til deg som søkar utbetaling for 2020",
+    "step.fravaer.info2020.nedtrekk.1": "Reglane for kor mange dagar du sjølv må dekkje har endra seg fleire gonger på grunn av koronasituasjonen. Her er ei oversikt over kor mange omsorgsdagar du sjølv må dekkje i 2020:",
+    "step.fravaer.info2020.nedtrekk.list.1": "1. januar 2020 – 12. mars 2020 må du dekkje dei 10 første omsorgsdagane sjølv",
+    "step.fravaer.info2020.nedtrekk.list.2": "13. mars 2020 – 30. juni 2020 må du dekkje dei 3 første omsorgsdagane sjølv.",
+    "step.fravaer.info2020.nedtrekk.list.3": "1. juli 2020 – 31. desember 2020 må du dekkje dei 10 første omsorgsdagane sjølv.",
+    "step.fravaer.info2020.nedtrekk.2": "Dagane du sjølv skal dekkje gjeld totalt for 2020. Det betyr at viss du i 2020 allereie har dekt til dømes 7 dagar, står att det 3 dagar for deg å dekkje i 2020.",
 
     "step.fravaer.spm.harPerioderMedFravær": "Har du hatt heile dagar med fråvær frå jobb?",
     "step.fravaer.harPerioderMedFravær.addLabel": "Legg til ny periode med fullt fråvær.",
