--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -317,7 +317,7 @@
     "fieldvalidation.ingen_dokumenter": "Ingen vedlegg er lastet opp",
     "fieldvalidation.for_mange_dokumenter": "For mange dokumenter er lastet opp",
     "fieldvalidation.samlet_storrelse_for_hoy": "Total samlet størrelse for dokumentene du har lastet opp overstiger grensen på 24Mb.",
-
+    "fieldvalidation.fraværPeriodeIkkeSammeÅrstall": "Du har lagt til fravær som er i flere år. En søknad kan kun inneholde fravær i ett år.",
     "fieldvalidation.aleneomsorgFor_påkrevd": "Du har valgt at du er alene om omsorgen for barn, da må du velge hvilket barn du har aleneomsorg for",
     "fieldvalidation.andreBarn_påkrevd": "Du må legge til barn for å kunne gå videre",
 
