Spørsmål om de ti første dagene er dekket

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -179,6 +179,7 @@
     "step.fravaer.info2020.nedtrekk.list.3": "1. juli 2020 – 31. desember 2020 må du dekke de 10 første omsorgsdagene selv.",
     "step.fravaer.info2020.nedtrekk.2": "Dagene du selv skal dekke gjelder totalt for 2020. Det betyr at hvis du i 2020 allerede har dekket for eksempel 7 dager, gjenstår det 3 dager for deg å dekke i 2020.",
 
+    "step.fravaer.spm.harDekketTiFørsteDagerSelv": "Har du dekket de ti første dagene selv?",
     "step.fravaer.spm.harPerioderMedFravær": "Har du hatt hele dager med fravær fra jobb?",
     "step.fravaer.harPerioderMedFravær.addLabel": "Legg til ny periode med fullt fravær",
     "step.fravaer.harPerioderMedFravær.modalTitle": "Fravær hele dager",
