--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -83,9 +83,9 @@
     "step.periode.stepTitle": "Første og siste dag du skal søke for",
     "step.periode.stepIndicatorLabel": "Første og siste dag du skal søke for",
 
-    "step.fravaer.pageTitle": "Perioder - Søknad om utbetaling av omsorgspenger",
-    "step.fravaer.stepTitle": "Hvilke dager har du vært hjemme med barn?",
-    "step.fravaer.stepIndicatorLabel": "Hvilke dager har du vært hjemme med barn?",
+    "step.fravaer.pageTitle": "Dager du har vært hjemme med barn",
+    "step.fravaer.stepTitle": "Dager du har vært hjemme med barn",
+    "step.fravaer.stepIndicatorLabel": "Dager du har vært hjemme med barn",
 
     "step.arbeidssituasjon.pageTitle": "Arbeidssituasjon - Søknad om utbetaling av omsorgspenger",
     "step.arbeidssituasjon.stepTitle": "Arbeidssituasjon",
@@ -165,37 +165,30 @@
     "step.fravaer.dager_med_delvis_fravært.label": "Dager med delvis fravær",
     "step.fravaer.dager_med_delvis_fravært.info": "TODO",
     "step.fravaer.har_du_oppholdt_deg_i_utlandet_for_dager_du_soker_ok.spm": "Har du vært i utlandet noen av dagene du søker omsorgspenger for?",
-    "step.fravaer.harSøktAndreUtbetalinger.spm": "Har du søkt om andre utbetalinger fra NAV i forbindelse med koronasituasjonen?",
-    "step.fravaer.hvilke_utbetalinger.spm": "Hvilke andre utbetalinger fra NAV har du søkt om?",
+    "step.fravaer.harSøktAndreUtbetalinger.spm": "Har du søkt om andre utbetalinger fra NAV?",
+    "step.fravaer.hvilke_utbetalinger.spm": "Hvilke andre utbetalinger har du søkt om?",
 
-    "step.fravaer.info2021.1": "Nå skal du legge inn dagene du har hatt fravær fra jobb fordi du har vært hjemme med omsorgsdager. Du kan få utbetalt omsorgspenger i opptil tre måneder tilbake i tid, regnet fra måneden før NAV mottok søknad fra deg.",
-    "step.fravaer.info2021.2": "For omsorgsdager du bruker i 2021 må du selv dekke de 10 første dagene.",
-    "step.fravaer.info2021.3": "I søknaden legger du kun inn dagene du søker utbetaling for. Du skal altså ikke legge inn dagene du dekker selv.",
-    "step.fravaer.info2021.nedtrekk.title": "Informasjon til deg som søker utbetaling for 2021",
-    "step.fravaer.info2020.nedtrekk.title": "Informasjon til deg som søker utbetaling for 2020",
-    "step.fravaer.info2020.nedtrekk.1": "Reglene for hvor mange dager du selv må dekke har endret seg flere ganger på grunn av koronasituasjonen. Her er en oversikt over hvor mange omsorgsdager du selv må dekke i 2020:",
-    "step.fravaer.info2020.nedtrekk.list.1": "1. januar 2020 – 12. mars 2020 må du dekke de 10 første omsorgsdagene selv.",
-    "step.fravaer.info2020.nedtrekk.list.2": "13. mars 2020 – 30. juni 2020 må du dekke de 3 første omsorgsdagene selv.",
-    "step.fravaer.info2020.nedtrekk.list.3": "1. juli 2020 – 31. desember 2020 må du dekke de 10 første omsorgsdagene selv.",
-    "step.fravaer.info2020.nedtrekk.2": "Dagene du selv skal dekke gjelder totalt for 2020. Det betyr at hvis du i 2020 allerede har dekket for eksempel 7 dager, gjenstår det 3 dager for deg å dekke i 2020.",
-
+    "step.fravaer.info.1": "Nå skal du legge inn dagene du har hatt fravær fra jobb fordi du har vært hjemme med omsorgsdager. Du kan få utbetalt omsorgspenger i opptil tre måneder tilbake i tid, regnet fra måneden før NAV mottok søknad fra deg.",
+    "step.fravaer.info.2": "I søknaden legger du kun inn dagene du søker utbetaling for. Du skal altså ikke legge inn de 10 første dagene som du dekker selv.",
     "step.fravaer.spm.harDekketTiFørsteDagerSelv": "Har du dekket de ti første dagene selv?",
     "step.fravaer.spm.harPerioderMedFravær": "Har du hatt hele dager med fravær fra jobb?",
-    "step.fravaer.harPerioderMedFravær.addLabel": "Legg til ny periode med fullt fravær",
-    "step.fravaer.harPerioderMedFravær.modalTitle": "Fravær hele dager",
-    "step.fravaer.harPerioderMedFravær.info.ikkeHelg.tittel": "Hvorfor kan jeg ikke velge lørdag eller søndag?",
-    "step.fravaer.harPerioderMedFravær.info.ikkeHelg.tekst": "Du kan kun få utbetalt omsorgspenger for hverdager, selv om du jobber lørdag eller søndag. Derfor kan du ikke velge lørdag eller søndag som start- eller sluttdato i perioden du legger inn.",
-    "step.fravaer.leggTilPeriodeMedFulltFravær": "Legg til ny periode med fullt fravær",
-    "step.fravaer.leggTilDagMedDelvisFravær": "Legg til ny dag med delvis fravær",
+    "step.fravaer.dager.tittel": "Omsorgsdager du søker utbetaling for",
+    "step.fravaer.dager.info": "Her skal du legge inn dagene du søker utbetaling for. Du kan kun søke om dager fra ett og samme år. Hvis du skal søke for {forrigeÅr} i tillegg til {inneværendeÅr} må du sende to søknader.",
+    "step.fravaer.harPerioderMedFravær.listTitle": "Dager med fullt fravær fra jobb",
+    "step.fravaer.harPerioderMedFravær.addLabel": "Legg til dager med fullt fravær fra jobb",
+    "step.fravaer.harPerioderMedFravær.modalTitle": "Dager med fullt fravær fra jobb",
+    "step.fravaer.info.ikkeHelg.tittel": "Hvorfor kan jeg ikke velge lørdag eller søndag?",
+    "step.fravaer.info.ikkeHelg.tekst": "Du kan kun få utbetalt omsorgspenger for hverdager, selv om du jobber lørdag eller søndag. Derfor kan du ikke velge lørdag eller søndag som start- eller sluttdato i perioden du legger inn.",
     "step.fravaer.spm.harDagerMedDelvisFravær": "Har du hatt dager med delvis fravær fra jobb?",
     "step.fravaer.spm.hjemmePgaStengtBhgSkole.2021": "Har du vært hjemme fra jobb fordi barnehage/skole/SFO har vært stengt på grunn av koronaviruset?",
-    "step.fravaer.harDagerMedDelvisFravær.addLabel": "Legg til ny dag med delvis fravær",
-    "step.fravaer.harDagerMedDelvisFravær.modalTitle": "Fravær deler av dag",
-    "step.fravaer.harDagerMedDelvisFravær.info.ikkeHelg.tittel": "Hvorfor kan jeg ikke velge lørdag eller søndag?",
-    "step.fravaer.harDagerMedDelvisFravær.info.ikkeHelg.tekst": "Du kan kun få utbetalt omsorgspenger for hverdager, selv om du jobber lørdag eller søndag. Derfor kan du ikke legge inn delvis fravær på lørdager eller søndager.",
+    "step.fravaer.harDagerMedDelvisFravær.listTitle": "Dager med delvis fravær fra jobb",
+    "step.fravaer.harDagerMedDelvisFravær.addLabel": "Legg til dag med delvis fravær fra jobb",
+    "step.fravaer.harDagerMedDelvisFravær.modalTitle": "Dag med delvis fravær fra jobb",
     "step.fravaer.måVelgeSituasjon": "Du må velge én av situasjonene over.",
-    "step.fravaer.utenlandsopphold.addLabel": "Legg til nytt utenlandsopphold",
+    "step.fravaer.utenlandsopphold.tittel": "Utenlandsopphold i dagene med fravær",
+    "step.fravaer.utenlandsopphold.addLabel": "Legg til utenlandsopphold",
     "step.fravaer.utenlandsopphold.modalTitle": "Utenlandsopphold siste 12 måneder",
+    "step.fravaer.andreUtbetalinger": "Andre utbetalinger fra NAV",
 
     "steg.arbeid.spm": "Hva er din arbeidssituasjon? Du kan velge flere.",
 
