--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -194,15 +194,15 @@
 
     "step.arbeidssituasjon.erArbeidstaker": "Er du arbeidstaker i tillegg til at du er selvstendig næringsdrivende og/eller frilanser?",
 
-    "step.barn.registrerteBarn.listHeader": "Registrerte barn",
+    "step.barn.registrerteBarn.listHeader": "Barn som er registrert på deg:",
     "steg.barn.pageTitle": "Om barn",
     "steg.barn.stepTitle": "Om barn",
+    "steg.barn.info.1": "Her ser du barn under 18 år som er registrert på deg.",
+    "steg.barn.info.2": "Hvis du har fosterbarn, eller barn som er 18 år eller eldre, kan du selv legge til dette barnet.",
     "steg.barn.nextButtonLabel": "Fortsett",
-    "steg.barn.info": "Infotekst må skrives",
-    "steg.barn.info.ingenBarnFunnet": "Melding når ingen barn er funnet",
-    "steg.barn.info.title.andreBarn": "Har du andre barn?",
-    "steg.barn.info.title.flereBarn": "Har du flere barn?",
-    "steg.barn.info.text": "Har du barn som ikke er registrert her, kan du legge inn disse selv. ",
+    "steg.barn.dineBarn": "Dine barn",
+    "steg.barn.ingenBarnFunnet": "Vi finner ikke noen barn som er registrert på deg.",
+    "steg.barn.flereBarn.info": "Har du barn som ikke er registrerte her, kan du legge inn disse selv.",
     "steg.barn.annetBarn.addLabel": "Legg til barn",
     "steg.barn.annetBarn.listTitle": "Andre barn",
     "steg.barn.annetBarn.modalTitle": "Legg til barn",
@@ -211,6 +211,10 @@
     "steg.barn.harAleneOmsorg.ettBarn.spm": "Er du alene om omsorgen for barnet ditt?",
     "steg.barn.hvilkeAvBarnaAleneomsorg.spm": "Kryss av for barn du er alene om omsorgen for:",
     "steg.barn.aldersGrenseInfo": "(Du kan ikke legge til barn som er 19 år eller eldre)",
+    "steg.barn.aleneomsorg.info.tittel": "Hva betyr det å være alene om omsorgen?",
+    "steg.barn.aleneomsorg.info.tekst.1": "Når det gjelder omsorgsdager, er du regnet som alene om omsorgen hvis du ikke bor sammen med den andre forelderen, og barnet bor fast bare hos deg. Det betyr at barnet har folkeregistrert adresse hos deg.",
+    "steg.barn.aleneomsorg.info.tekst.2": "Hvis du og den andre forelderen har en avtale om delt bosted vil ingen av dere bli regnet som alene om omsorgen.",
+    "steg.barn.aleneomsorg.lagring.info": "Vi lagrer informasjonen om at du er alene om omsorgen. Hvis du gifter deg, eller har vært samboer i mer enn 12 måneder, regnes du ikke lenger som alene om omsorgen. I de tilfellene må du gi beskjed  til oss.",
 
     "steg.medlemsskap.annetLandSiste12.spm": "Har du bodd i utlandet i hele eller deler av de siste 12 månedene?",
     "steg.medlemsskap.annetLandNeste12.spm": "Planlegger du å bo i utlandet i hele eller deler av de neste 12 månedene?",
