--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -192,7 +192,7 @@
 
     "steg.arbeid.spm": "Hva er din arbeidssituasjon? Du kan velge flere.",
 
-    "step.barn.registrerteBarn.listHeader": "Barn som er registrert på deg:",
+    "steg.barn.registrerteBarn.listHeader": "Barn som er registrert på deg:",
     "steg.barn.pageTitle": "Om barn",
     "steg.barn.stepTitle": "Om barn",
     "steg.barn.info.1": "Her ser du barn under 18 år som er registrert på deg.",
