--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -194,14 +194,9 @@
 
     "steg.barn.pageTitle": "Fosterbarn",
     "steg.barn.stepTitle": "Fosterbarn",
-    "steg.barn.info": "Hvis du har fosterbarn, kan du selv legge til dette barnet.",
+    "steg.barn.fosterbarn.spm": "Har du fosterbarn?",
     "steg.barn.nextButtonLabel": "Fortsett",
     "steg.barn.dineBarn": "Dine fosterbarn",
-    "steg.barn.annetBarn.addLabel": "Legg til fosterbarn",
-    "steg.barn.annetBarn.listTitle": "Dine fosterbarn",
-    "steg.barn.annetBarn.modalTitle": "Legg til fosterbarn",
-    "steg.barn.formLeggTilBarn.aldersGrenseInfo": "(Du kan ikke legge til barn som er 19 år eller eldre)",
-    "steg.barn.aldersGrenseInfo": "(Du kan ikke legge til barn som er 19 år eller eldre)",
 
     "steg.medlemsskap.annetLandSiste12.spm": "Har du bodd i utlandet i hele eller deler av de siste 12 månedene?",
     "steg.medlemsskap.annetLandNeste12.spm": "Planlegger du å bo i utlandet i hele eller deler av de neste 12 månedene?",
@@ -303,7 +298,6 @@
     "fieldvalidation.for_mange_dokumenter": "For mange dokumenter er lastet opp",
     "fieldvalidation.samlet_storrelse_for_hoy": "Total samlet størrelse for dokumentene du har lastet opp overstiger grensen på 24Mb.",
     "fieldvalidation.fraværPeriodeIkkeSammeÅrstall": "Du har lagt til fravær som er i flere år. En søknad kan kun inneholde fravær i ett år.",
-    "fieldvalidation.andreBarn_påkrevd": "Du må legge til barn for å kunne gå videre",
     "fieldvalidation.frilans_startEtterSlutt": "Datoen du sluttet som frilanser kan ikke være før datoen du startet",
     "fieldvalidation.frilans_startEtterDagensDato": "Datoen for når du startet som frilanser, kan ikke være frem i tid",
     "fieldvalidation.harDekketTiFørsteDagerSelv_påkrevd": "Du må svare på om du har dekket de ti første dagene selv",
